--- a/rabbitmq-consumer/src/main/resources/application.yml
+++ b/rabbitmq-consumer/src/main/resources/application.yml
@@ -7,9 +7,10 @@ spring:
     name: rabbitmq-consumer
   #配置rabbitMq 服务器
   rabbitmq:
-    host: 127.0.0.1
+#    host: 127.0.0.1
+    host: 192.168.181.128   #docker 中的
     port: 5672
     username: guest
     password: guest
     #虚拟host 可以不设置,使用server默认host
-#    virtual-host: JCcccHost
+#    virtual-host:
