--- a/rabbitmq-provider/src/main/resources/application.yml
+++ b/rabbitmq-provider/src/main/resources/application.yml
@@ -6,7 +6,8 @@ spring:
     name: rabbitmq-provider
   #配置rabbitMq 服务器
   rabbitmq:
-    host: 127.0.0.1
+#    host: 127.0.0.1
+    host: 192.168.181.128   #docker 中的
     port: 5672
 #    username: root
 #    password: root
