--- a/rabbitmq-consumer/src/main/resources/application.yml
+++ b/rabbitmq-consumer/src/main/resources/application.yml
@@ -13,4 +13,4 @@ spring:
     username: guest
     password: guest
     #虚拟host 可以不设置,使用server默认host
-#    virtual-host:
+#    virtual-host: my-rabbit
