死信队列 和 延迟 队列

--- a/rabbitmq-consumer/pom.xml
+++ b/rabbitmq-consumer/pom.xml
@@ -26,6 +26,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>net.minidev</groupId>
+            <artifactId>json-smart</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.6.3</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
