--- a/rabbitmq-consumer/src/main/resources/application.yml
+++ b/rabbitmq-consumer/src/main/resources/application.yml
@@ -14,3 +14,20 @@ spring:
     password: guest
     #虚拟host 可以不设置,使用server默认host
 #    virtual-host: my-rabbit
+
+    #    2021年9月22日09:51:33
+    template:
+      # 必须设置成true 消息路由失败通知监听者，false 将消息丢弃
+      mandatory: true
+      listener:
+        simple:
+          # 每次从RabbitMQ获取的消息数量
+          prefetch: 1
+          default-requeue-rejected: false
+          # 每个队列启动的消费者数量
+          concurrency: 1
+          # 每个队列最大的消费者数量
+          max-concurrency: 1
+          # 签收模式为手动签收-那么需要在代码中手动ACK
+          acknowledge-mode: manual
+
