延迟队列和死信队列

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <modules>
         <module>rabbitmq-provider</module>
         <module>rabbitmq-consumer</module>
+        <module>rabbitmq-common</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
