--- a/rabbitmq-provider/pom.xml
+++ b/rabbitmq-provider/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>hutool-all</artifactId>
             <version>5.6.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.wxj.rabbit</groupId>
+            <artifactId>rabbitmq-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
